Added sample for Hibernate

--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,7 @@
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jersey.version>1.17.1</jersey.version>
-        <guice.version>3.0</guice.version>
-        <guava.version>r09</guava.version>
-        <tomcat.target.dev>${env.HOME}/development/servers/tomcat/apache-tomcat-7.0.42/webapps</tomcat.target.dev>
-        
-        
-         <spring.version>4.0.4.RELEASE</spring.version>
-    </properties>
+
 
     <build>
         <finalName>JacksonGuiceExample</finalName>
@@ -42,11 +33,95 @@
 	                    </webApp>
 	                </configuration>
 	            </plugin>	
+				
+			<!-- creates database and tables -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>hibernate3-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<components>
+						<component>
+							<name>hbm2ddl</name>
+							<implementation>annotationconfiguration</implementation>
+						</component>
+					</components>
+					<componentProperties>
+						<drop>true</drop>
+						<jdk5>true</jdk5>
+						<propertyfile>target/test-classes/jdbc.properties</propertyfile>
+						<configurationfile>src/test/resources/hibernate-test.cfg.xml</configurationfile>
+						<skip>${skipTests}</skip>
+					</componentProperties>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>hbm2ddl</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>${jdbc.groupId}</groupId>
+						<artifactId>${jdbc.artifactId}</artifactId>
+						<version>${jdbc.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
+			<!-- inserts values to the created tables, without hibernate it can generate 
+				a database -->
+				<!--
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>dbunit-maven-plugin</artifactId>
+				<version>1.0-beta-3</version>
+				<configuration>
+					<dataTypeFactoryName>${dbunit.dataTypeFactoryName}</dataTypeFactoryName>
+					<driver>${jdbc.driverClassName}</driver>
+					<username>${jdbc.username}</username>
+					<password>${jdbc.password}</password>
+					<url>${jdbc.url}</url>
+					<src>src/test/resources/sample-data.xml</src>
+					<type>${dbunit.operation.type}</type>
+					<schema>${dbunit.schema}</schema>
+					<skip>${skipTests}</skip>
+					<transaction>true</transaction>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>test-compile</phase>
+						<goals>
+							<goal>operation</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>${jdbc.groupId}</groupId>
+						<artifactId>${jdbc.artifactId}</artifactId>
+						<version>${jdbc.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>				
+				-->
+				
         </plugins>
+		
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>		
+		
     </build>
     <dependencyManagement>
         <dependencies>
-
+	
+		
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-framework-bom</artifactId>
@@ -59,6 +134,23 @@
     </dependencyManagement>
     <dependencies>
 
+			<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.5.Final</version>
+		</dependency>
+		<!-- Hibernate uses slf4j for logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.27</version>
+		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -197,5 +289,36 @@
 		
     </dependencies>
     
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jersey.version>1.17.1</jersey.version>
+        <guice.version>3.0</guice.version>
+        <guava.version>r09</guava.version>
+        <tomcat.target.dev>${env.HOME}/development/servers/tomcat/apache-tomcat-7.0.42/webapps</tomcat.target.dev>
+        
+        
+         <spring.version>4.0.4.RELEASE</spring.version>
+		 
+		 
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+		<dbunit.dataTypeFactoryName>org.dbunit.ext.mysql.MySqlDataTypeFactory</dbunit.dataTypeFactoryName>
+		<dbunit.operation.type>CLEAN_INSERT</dbunit.operation.type>
+
+		<jdbc.groupId>mysql</jdbc.groupId>
+		<jdbc.artifactId>mysql-connector-java</jdbc.artifactId>
+		<jdbc.version>5.1.27</jdbc.version>
+		<jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
+		<jdbc.url>
+            <![CDATA[jdbc:mysql://localhost/guicespringexample?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true]]>
+		</jdbc.url>
+		<jdbc.username>root</jdbc.username>
+		<jdbc.password>wodna33</jdbc.password>
+
+		<!-- needed for jdbc.properties file -->
+		<jdbc.validationQuery><![CDATA[SELECT 1 + 1]]></jdbc.validationQuery>
+		<hibernate.dialect>org.hibernate.dialect.MySQL5InnoDBDialect</hibernate.dialect>		 
+		 
+    </properties>
+	
 </project>
